objects/DictionaryItemReference__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DictionaryItemAPIName__c</fullName>
        <formula>DictionaryItem__r.APIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dictionary Item API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DictionaryItemLabel__c</fullName>
        <formula>DictionaryItem__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dictionary Item Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DictionaryItemMetadataIdentifier__c</fullName>
        <formula>DictionaryItem__r.MetadataIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dictionary Item Metadata Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalSystemContact__c</fullName>
        <label>External System Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FrequencyDetails__c</fullName>
        <label>Frequency Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobNames__c</fullName>
        <label>Job Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PseudoCode__c</fullName>
        <label>Pseudo Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDCContact__c</fullName>
        <label>SFDC Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCRole__c</fullName>
        <label>SFDC Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MARS</fullName>
                </value>
                <value>
                    <fullName>Seismic Outlook Plug-in</fullName>
                </value>
                <value>
                    <fullName>EDW</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
                <value>
                    <fullName>Data Load</fullName>
                </value>
                <value>
                    <fullName>SFDC Outlook Plug-In</fullName>
                </value>
                <value>
                    <fullName>Email to Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Batch Apex</fullName>
                </value>
                <value>
                    <fullName>Declarative Roll-up</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Informatica Cloud Mapping</fullName>
                </value>
                <value>
                    <fullName>Periodic Data Load</fullName>
                </value>
                <value>
                    <fullName>Process Builder</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>User (Manual)</fullName>
                </value>
                <value>
                    <fullName>Validation Rule</fullName>
                </value>
                <value>
                    <fullName>Visualforce Controller or Extension</fullName>
                </value>
                <value>
                    <fullName>Web Service - Asynchronous</fullName>
                </value>
                <value>
                    <fullName>Web Service - Synchronous</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DictionaryItem__c</fullName>
        <label>Dictionary Item</label>
        <referenceTo>DictionaryItem__c</referenceTo>
        <relationshipName>DictionaryItemSourcesAndTargets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <description>The sources,targets, and other references (apex, process builders) of dictionary items</description>
    <label>Dictionary Item Reference</label>
    <nameField>
        <displayFormat>DIR-{0000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dictionary Item References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>Data_Entry</fullName>
        <active>true</active>
        <description>References in business processes where a user provides data and updates values manually</description>
        <label>Data Entry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integration</fullName>
        <active>true</active>
        <description>References in integrations from external systems that move data into or out of Salesforce</description>
        <label>Integration</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC_Business_Logic</fullName>
        <active>true</active>
        <description>References in Apex Classes, Batch Processes, Triggers, Process Builders, Workflows, Flows, etc.</description>
        <label>SFDC Business Logic</label>
    </recordTypes>
</CustomObject>